[package]
name = "locdev"
version = "0.1.2"
edition = "2021"
description = "locdev is a command-line utility for managing your /etc/hosts file."
authors = ["Nicholas Rempel <nbrempel@gmail.com>"]
license = "MIT"
keywords = ["localhost", "hosts", "local"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/nrempel/locdev"

[dependencies]
clap = { version = "4.5.1", features = ["cargo", "derive"] }
colored = "2.1.0"
lazy_static = "1.4.0"
os_info = "3.8.2"
thiserror = "1.0.53"
tokio = { version = "1.35.1", features = [
    "fs",
    "io-util",
    "macros",
    "rt-multi-thread",
] }
